# twm

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
include/twm/: common.h  config.h  hotkey.h  icon.h  logging.h  math.h  platform.h  tray.h
resources/: icon.rc  patch.wxs  winget.yaml
scripts/: configure-winget.cmake
src/: common.cpp  config.cpp  hotkey.cpp  logging.cpp  main.cpp  math.cpp  platform.cpp  tray.cpp
